--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title> module2 assingment </title>
-  </head>
-  <body> 
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="../module2-solutions-css/css.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body> 
     <center> <h1> OUR MENU </h1> </center>
-    <p> Chicken </p>
-  </body>
+    <h2>
+    <section> <p class="Chicken"> Chicken </p> 
+    Lorem ipsum dolor sit amet consectetur adipisic elit. Illum ipsa quo distinctio obcaecati voluptates ipsum
+    </section>
+   <section>
+    <p class="beef"> Beef </p>
+ Lorem ipsum dolor sit amet consectetur adipisic elit. Illum ipsa quo distinctio obcaecati voluptates ipsum
+   </section>
+   
+   <section>
+    <p class="shushi"> Shushi</p>
+    Lorem ipsum dolor sit amet consectetur adipisic elit. Illum ipsa quo distinctio obcaecati voluptates ipsum
+   </section> 
+</h2>
+   
+
+   
+</body>
 </html>
